# sqlite3.dart

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  LICENSE  NOTES.md  README.md  UPGRADING_TO_V3.md  build_ssl.sh  pubspec.yaml
.github/: dependabot.yml  zizmor.yaml
.github/workflows/: compile_sqlite.yml  main.yml  release.yml  test.yml
examples/: pubspec.yaml
examples/flutter_integration_tests/: .metadata  README.md  pubspec.yaml
examples/multiplatform/: main.dart  pubspec.yaml
flutter_application_example/android/: local.properties
integration_tests/: pubspec.yaml
integration_tests/common/: pubspec.yaml
integration_tests/flutter_cocoapods/: pubspec.yaml
integration_tests/flutter_libs/: .gitignore  README.md  pubspec.yaml
integration_tests/flutter_libs_swiftpm/: .metadata  README.md  pubspec.yaml
integration_tests/flutter_swiftpm/: pubspec.yaml
integration_tests/native_assets/: README.md  pubspec.yaml
integration_tests/sqlcipher_flutter/: .gitignore  README.md  pubspec.yaml
legacy/sqlcipher_flutter_libs/: CHANGELOG.md  README.md  pubspec.yaml
legacy/sqlite3_flutter_libs/: CHANGELOG.md  README.md  pubspec.yaml
native_tests/: all_native_tests.dart  ignorelist.txt  pubspec.yaml  run.dart
slcipher_flutter_libs/: pubspec.yaml
slcipher_flutter_libs/android/: build.gradle
slcipher_flutter_libs/example/: pubspec.yaml
sqlcipher_flutter_libs/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
sqlcipher_flutter_libs/android/: build.gradle  settings.gradle
sqlcipher_flutter_libs/example/: README.md  pubspec.yaml
sqlcipher_flutter_libs/ios/: sqlcipher_flutter_libs.podspec  sqlite3_flutter_libs.podspec
sqlcipher_flutter_libs/lib/: sqlcipher_flutter_libs.dart
sqlcipher_flutter_libs/linux/: CMakeLists.txt  sqlite3_flutter_libs_plugin.cc
sqlcipher_flutter_libs/macos/: sqlcipher_flutter_libs.podspec
sqlcipher_flutter_libs/windows/: CMakeLists.txt  sqlite3_flutter.c  sqlite3_flutter_libs_plugin.cpp
sqlcipher_flutter_libs/windows/include/sqlcipher_flutter_libs/: sqlite3_flutter_libs_plugin.h
sqlite3/: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  analysis_options.yaml  build.dart  build.yaml  dart_test.yaml  dartdoc_options.yaml  ffigen.yaml  pubspec.yaml
sqlite3/assets/: dart_workarounds.c  dart_workarounds.h  session.h  sqlite3.h  sqlite3_dart_wasm.h
sqlite3/assets/wasm/: CMakeLists.txt  bridge.h  config.h  getentropy.c  helpers.c  libc_helpers.c  mutex_shims.c  os_web.c  sqlite_cfg.h  toolchain.cmake
sqlite3/doc/: common.md  hook.md  native.md  releasing.md  wasm.md
sqlite3/example/: database.dart  jsonb.dart  main.dart  repro.dart
sqlite3/example/custom_extension/src/: CMakeLists.txt
sqlite3/example/custom_wasm_build/: Cargo.toml  README.md  build.rs  link.dart
sqlite3/example/custom_wasm_build/src/: common.rs  extension.rs  lib.rs  tokenize.rs
sqlite3/hook/: build.dart
sqlite3/lib/: common.dart  default_open.dart  native_assets.dart  open.dart  sqlite3.dart  sqlite3_native_library.dart  wasm.dart
sqlite3/test/: database_test.dart  errors_test.dart  ffi_test.dart  jsonb_test.dart  open.dart  prepared_statement_test.dart  source_code_test.dart  sqlite3_test.dart  version_test.dart  wasm_test.dart
sqlite3/tool/: check_compile_time_option.dart  example_server.dart  format_native.dart  format_native.sh  generate_bindings.dart  serve_web_example.dart  wasm_dce.dart  wasm_symbols.dart
sqlite3_connection_pool/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  pubspec.yaml
sqlite3_connection_pool/.cargo/: config.toml
sqlite3_connection_pool/example/: main.dart
sqlite3_connection_pool/hook/: build.dart
sqlite3_connection_pool/lib/: sqlite3_connection_pool.dart
sqlite3_connection_pool/src/: client.rs  connection.rs  dart.rs  headers.h  lib.rs  pool.rs  registry.rs  update_hook.rs
sqlite3_connection_pool/test/: pool_test.dart
sqlite3_connection_pool/tool/: build_apple.sh  build_linux.sh  build_linux_sanitizer.sh  generate_bindings.dart
sqlite3_flutter_libs/: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
sqlite3_flutter_libs/android/: build.gradle
sqlite3_flutter_libs/darwin/: sqlite3_flutter_libs.podspec
sqlite3_flutter_libs/example/: pubspec.yaml
sqlite3_flutter_libs/ios/: sqlite3_flutter_libs.podspec
sqlite3_flutter_libs/lib/: sqlite3_flutter_libs.dart
sqlite3_flutter_libs/linux/: CMakeLists.txt  sqlite3_flutter_libs_plugin.cc
sqlite3_flutter_libs/linux/include/sqlite3_flutter_libs/: sqlite3_flutter_libs_plugin.h
sqlite3_flutter_libs/macos/: sqlite3_flutter_libs.podspec
sqlite3_flutter_libs/windows/: CMakeLists.txt  sqlite3_flutter.c  sqlite3_flutter_libs_plugin.cpp
sqlite3_native_assets/: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
sqlite3_native_assets/example/: main.dart
sqlite3_native_assets/hook/: build.dart
sqlite3_native_assets/lib/: sqlite3_native_assets.dart
sqlite3_native_assets/test/: build_test.dart  defines_test.dart  pool_test.dart
sqlite3_test/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
sqlite3_test/example/: sqlite3_test_example.dart
sqlite3_test/lib/: sqlite3_test.dart
sqlite3_test/test/: sqlite3_test_test.dart
sqlite3_wasm_build/: README.md  pubspec.yaml
sqlite3_wasm_build/src/: CMakeLists.txt  bridge.h  external_objects.c  external_objects.h  getentropy.c  helpers.c  os_web.c  sqlite_cfg.h
sqlite3_wasm_build/tool/: wasm_symbols.dart
sqlite3_web/: CHANGELOG.md  README.md  build.yaml  dart_test.yaml  pubspec.yaml
sqlite3_web/benchmark/: benchmark.dart  index.html  main.dart  message.dart  worker.dart
sqlite3_web/example/: controller.dart  index.html  main.dart  main.js  worker.dart
sqlite3_web/lib/: protocol_utils.dart  sqlite3_web.dart  types.dart
sqlite3_web/test/: asset_server.dart  client_test.dart  integration_test.dart  js_array_buffer_test.dart  lock_test.dart  protocol_test.dart  types_test.dart  (+1 more)
tool/: build_openssl.dart  build_sqlite.dart  build_with_sanitizers.dart  compile_sqlite.dart  download_sqlite.dart  hook_overrides.dart  prepare_native_assets_test.dart  sqlite_build_id  write_asset_hashes.dart
(+410 files in other folders)
