[package]
name = "custom_wasm_build"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
unicode-segmentation = { version = "1.10.1", "default-features" = false }
unicode-normalization = { version = "0.1.22" , "default-features" = false }
# libc without `std`
libc = { version = "0.2", "default-features" = false, features = [] }

[build-dependencies]
cc = "1.0.46"
cmake = "0.1.50"

[profile.release]
opt-level = "z"
lto=true
